Bug 355947 - Snaphelper effect doesn't show outline when moving Wayland windows
Summary: Snaphelper effect doesn't show outline when moving Wayland windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-26 15:40 UTC by Martin Flöser
Modified: 2016-08-29 05:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2015-11-26 15:40:36 UTC
This might indicate a missing signal being emitted when moving a ShellClient instead of a Client.
Comment 1 Thomas Lübking 2015-11-26 23:43:33 UTC
Looks wired up fine from (only location) AbstractClient::startMoveResize()
I'm rather worried that painting happens in postPaintScreen, eg. I get superimposing lines on repaints...
Comment 2 Martin Flöser 2015-11-27 07:03:24 UTC
> I'm rather worried that painting happens in postPaintScreen

Yeah, I'm just changing all effects to the new traits api and while adjusting snaphelper I also noticed that and moved the code into paintScreen.
Comment 3 Martin Flöser 2016-08-29 05:56:16 UTC
Git commit 42e82f09be74023d84361e77dd8ab289bef44b08 by Martin Gräßlin.
Committed on 29/08/2016 at 05:53.
Pushed by graesslin into branch 'master'.

Move Q_PROPERTY definitions from Client to AbstractClient

The properties:
 * maximizable
 * moveable
 * moveableAcrossScreens
 * resizeable

Were only defined on Client instead of AbstractClient. This resulted
in the EffectWindow having those properties evaluate always to false
for a ShellClient and breaking some effects.

M  +24   -0    abstract_client.h
M  +8    -0    autotests/integration/shell_client_test.cpp
M  +0    -24   client.h

http://commits.kde.org/kwin/42e82f09be74023d84361e77dd8ab289bef44b08